--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,21 @@ Desktop.ini
 $RECYCLE.BIN/
 /Squad
 /Tripartite 1.2.4.zip
+/Tripartite 1.2.5.zip
+/Tripartite 1.2.6.zip
+/Tripartite 1.2.7.zip
+/Tripartite 1.2.8.zip
+/Tripartite 1.2.9.zip
+/Tripartite 1.2.10.zip
+/Tripartite 1.2.11.zip
+/Tripartite 1.2.12.zip
+/Tripartite 1.2.13.zip
+/Tripartite 1.2.14.zip
+/Tripartite 1.3.0.zip
+/Tripartite 1.3.1.zip
+/Tripartite 1.3.2.zip
+/Tripartite 1.3.3.zip
+/Tripartite 1.3.4.zip
 
 # Windows Installer files
 *.cab
